Add tests in calculator